# linx

./: .cursorignore  .cursorrules  .gitignore  README.md  main.py  pyproject.toml
.cursor/Agents/: cynical_sre.md  lead_developer.md  pm_architect.md  rules.md  senior_architect.md
docs/: requirements.md  test_plan.md
src/cli/: args.py
src/domain/: configurations.py  exceptions.py  protocols.py
src/linx/cli/: args.py  runner.py
src/linx/domain/: protocols.py
src/linx/matching/: word_matcher.py
src/linx/readers/: docx_file_reader.py  factory.py  pdf_file_reader.py  text_file_reader.py
src/linx/testing/: fake_line_reader.py
src/matching/: word_matcher.py
src/readers/: base.py  docx_file_reader.py  factory.py  pdf_file_reader.py  text_file_reader.py
src/testing/: fake_line_reader.py
src/traversal/: file_traverser.py
test_folder/: csv1.csv  json1.json  text2.txt
test_folder/folder1/: should_be_found_2.txt  text1.txt
test_folder/folder2/: json.json  json2.json
test_folder/folder3/my_folder/: Copy of csv2.csv
test_folder/folder4/: should_be_found.csv
test_folder/folder4/my_folder4/: another_json.json
test_folder/folder4/my_folder444/folderrrrrrrr/: letter.txt
test_folder/folder5/: No_goat.docx  file_with_k_word_1.docx  file_with_k_word_2.docx  file_with_k_word_3.docx
tests/integration/: test_scanner.py
tests/unit/: test_args.py  test_docx_pdf_readers.py  test_exception_handling.py  test_file_traverser.py  test_main.py  test_readers.py  test_word_matcher.py
