[project]
name = "linx"
version = "0.1.0"
description = "Local filesystem file scanner with exact word matching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.0",
    "pypdf>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/cli",
    "src/domain",
    "src/matching",
    "src/readers",
    "src/testing",
    "src/traversal",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
